fixed overflowing text

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -445,4 +445,9 @@
   display:block;
 
 }
+
+.modal-header{
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 /* END SWITCH STYLES */
